# socru

./: .dockerignore  .travis.yml  AUTHORS  CLAUDE.md  CONTRIBUTORS  Dockerfile  README.md  output_profile.txt  pyproject.toml  run_tests.sh  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/: README.md  api_reference.md  installation.md  tutorial.md  user_guide.md  work_instruction.md
scripts/: socru  socru_create  socru_lookup  socru_rebuild_profile  socru_shrink_database  socru_species  socru_update_profile
socru/: AnalysisResult.py  Barrnap.py  BatchStats.py  Blast.py  BlastResult.py  ConfidenceScore.py  Database.py  DatabaseManager.py  Dif.py  DnaA.py  Fasta.py  FilterBlast.py  Fragment.py  FragmentFiles.py  GATProfile.py  HtmlReport.py  NoveltyDetector.py  Operon.py  PlotProfile.py  ProfileGenerator.py  Profiles.py  QCFlags.py  RearrangementDistance.py  Results.py  Schemas.py  ShrinkDatabase.py  Socru.py  SocruConfig.py  SocruCreate.py  SocruLookup.py  SocruRebuildProfile.py  SocruShrinkDatabase.py  SocruUpdateProfile.py  SvgConfidenceHeatmap.py  SvgCoveragePileup.py  SvgFragmentQuality.py  SvgGenomePlot.py  SvgSynteny.py  SvgTypeDistribution.py  ToolCheck.py  (+4 more)
socru/tests/: AnalysisResult_test.py  Barrnap_test.py  BatchStats_test.py  BlastResult_test.py  Blast_test.py  ConfidenceScore_test.py  ContextManager_test.py  DatabaseManager_test.py  Database_test.py  Dif_test.py  DnaA_test.py  EndToEnd_test.py  ErrorHandling_test.py  Fasta_test.py  FilterBlast_test.py  FragmentFiles_test.py  Fragment_test.py  GATProfile_test.py  HtmlReport_test.py  Integration_test.py  NoveltyDetector_test.py  Operon_test.py  OutputFormats_test.py  PlotProfile_test.py  ProfileGenerator_test.py  Profiles_test.py  PublicAPI_test.py  QCFlags_test.py  Results_test.py  (+21 more)
(+603 files in other folders)
